--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-empty-object-type":  "off",
+    "@next/next/no-img-element":  "off",
+    "prefer-const":  "off",
+    "@typescript-eslint/no-unused-expressions":  "off",
+    "@typescript-eslint/ban-ts-comment":  "off",
+    "react-hooks/rules-of-hooks":  "off",
+    "react/no-unescaped-entities":  "off",
+    "@typescript-eslint/no-explicit-any":  "off",
+  }
 }
