--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,6 @@
     "@typescript-eslint/ban-ts-comment":  "off",
     "react-hooks/rules-of-hooks":  "off",
     "react/no-unescaped-entities":  "off",
-    "@typescript-eslint/no-explicit-any":  "off",
+    "@typescript-eslint/no-explicit-any":  "off"
   }
 }
